<resources>
    <string name="app_name">OrderApp</string>
    <string name="scan_code">Scan code</string>
    <string name="cannot_order_now">We\'re sorry, but you cannot order at this time.</string>
    <string name="try_again_later">Please, try again during opening hours.</string>
    <string name="order_now">Order now</string>
    <string name="clock">Clock</string>
    <string name="share">Share</string>
    <string name="enter_code">Enter code</string>
    <string name="history">History</string>
    <string name="enter_code_input">Enter code :</string>
    <string name="enter_table_number">Enter Table number :</string>
    <string name="scan_failed">Scan failed</string>
    <string name="try_scan_again">The code you tried to scan was not recognised, please try to scan again or enter the code manually</string>
    <string name="welcome">Welcome</string>
    <string name="get_started_prompt">Scan or enter a code to get started</string>
    <string name="code_not_recognised">Code not recognised</string>
    <string name="code_not_recognised_prompt">The code or table number you have entered was not recognised. Try entering the code again or use your camera to scan the code</string>
    <string name="add_item">Add Item</string>
    <string name="sample_menu_item_description">We just serve you a big \'ol bowl \'o fish. Pretty much does what it ways on the tin. What kind of fish, you ask? A mixture of cooked and raw scraps we swooped off our kitchen floor and put into a bowl for you to enjoy.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_to_business_overview">Back to business overview</string>
    <string name="order_placed">Order placed</string>
    <string name="you_can_now_see_your_order_in_the_order_history">You can now see your order in the order history</string>
</resources>